--- a/src/utils/i18n/locals/en/en.json
+++ b/src/utils/i18n/locals/en/en.json
@@ -51,6 +51,12 @@
         "card3_location": "Yunusabad District, Tashkent",
         "card4_title": "The Knowledge Center",
         "card4_location": "243rd School Territory, Tashkent",
+        "card5_title": "Novus Towers",
+        "card5_location": "Minor district, Yunusobod district",
+        "card6_title": "Anhor",
+        "card6_location": "Anhor Boyi Street, Yunusobod district",
+        "card7_title": "Oncowell Company",
+        "card7_location": "",
         "sold": "Sold Out"
     },
     "project_map": {
@@ -67,7 +73,10 @@
         "location3_desc": "Yunusabad District",
         "location4_subtitle": "Innovative education center",
         "location4_title": "The Knowledge Center",
-        "location4_desc": "Olamazor District"
+        "location4_desc": "Olmazor district",
+        "location5_subtitle": "Modern metropolis",
+        "location5_title": "Novus Towers",
+        "location5_desc": "Minor district"
     },
     "partners": {
         "title": "Our Partners"
@@ -354,6 +363,47 @@
         "car_text2": "5 min to Clinic",
         "car_text4": "5 min to Cafes & Restaurants"
     },
+    "projects5": {
+        "title": "Novus Towers",
+        "subtitle": "The Future of Modern Urban Living in Tashkent",
+        "button_text1": "",
+        "button_text2": "Call Now",
+        "place": "Minor District",
+        "place_location": "Minor Area, Tashkent",
+        "school": "",
+        "school_location": "",
+        "business_center": "",
+        "business_center_location": "",
+        "sports_complex": "",
+        "sports_complex_location": "",
+        "image_desc": "Novus Towers is a modern multifunctional complex located in the Minor district of Tashkent, combining business, retail, hospitality, and residential spaces. Designed according to international standards, this architectural landmark creates an ideal environment for work, leisure, and modern living.",
+        "fact_title": "5 Key Facts About the Project",
+        "fact_desc": "Novus Towers is expected to become one of Tashkent’s most prestigious locations, offering convenience, modern living, and business opportunities all in one place.",
+        "fact_card1": "Terrace restaurants, food courts, and a modern multiplex cinema",
+        "fact_card2": "Convenient location and transport connections",
+        "fact_card3": "Luxury premium-class hotel",
+        "fact_card4": "Smart infrastructure for efficient business operations",
+        "fact_card5": "Leading global brands, stores, and entertainment venues",
+        "area": "0.45 ha",
+        "area_title": "Project Area",
+        "home_count": "3",
+        "home_count_title": "Underground Floors",
+        "floor": "19",
+        "floor_title": "Number of Floors",
+        "done_project": "2028",
+        "done_project_title": "Completion Date",
+        "location_title": "Convenient Location",
+        "foot": "On Foot",
+        "foot_text1": "15 min to Metro",
+        "foot_text2": "15 min to School",
+        "foot_text3": "15 min to Clinic",
+        "foot_text4": "5 min to Cafes and Restaurants",
+        "car": "By Car",
+        "car_text1": "5 min to Metro",
+        "car_text2": "5 min to Clinic",
+        "car_text3": "10 min to School",
+        "car_text4": "5 min to Cafes and Restaurants"
+    },
     "footer": {
         "links_title1": "INFO",
         "links1": "About Us",
@@ -367,6 +417,9 @@
         "links8": "Nurafshon Business Center",
         "links9": "Asia Medline",
         "links10": "The Knowledge Center",
+        "links11": "Novus Towers",
+        "links12": "Anhor",
+        "links13": "Oncowell Company",
         "title": "Ross Foundation",
         "location": "Tashkent City, Yunusabad District, Abdulla Qodiriy Street, House 1A",
         "call_center": "Call Center",
