--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -51,6 +51,12 @@
         "card3_location": "Юнусабадский район, Ташкент",
         "card4_title": "The Knowledge Center",
         "card4_location": "Территория 243-й школы, Ташкент",
+        "card5_title": "Novus Towers",
+        "card5_location": "Микрорайон Минор, Юнусабадский район",
+        "card6_title": "Anhor",
+        "card6_location": "Улица Анхор Бойи, Юнусабадский район",
+        "card7_title": "Oncowell Company",
+        "card7_location": "",
         "sold": "Продано"
     },
     "project_map": {
@@ -67,7 +73,10 @@
         "location3_desc": "Юнусабадский район",
         "location4_subtitle": "Инновационный образовательный центр",
         "location4_title": "The Knowledge Center",
-        "location4_desc": "Оламазарский район"
+        "location4_desc": "Оламазарский район",
+        "location5_subtitle": "Современный мегаполис",
+        "location5_title": "Novus Towers",
+        "location5_desc": "Минорский район"
     },
     "partners": {
         "title": "Наши партнеры"
@@ -354,6 +363,47 @@
         "car_text2": "5 мин до поликлиники",
         "car_text4": "5 мин до кафе и ресторанов"
     },
+    "projects5": {
+        "title": "Novus Towers",
+        "subtitle": "Будущее современной городской жизни в Ташкенте",
+        "button_text1": "",
+        "button_text2": "Позвонить",
+        "place": "Район Минор",
+        "place_location": "Массив Минор, Ташкент",
+        "school": "",
+        "school_location": "",
+        "business_center": "",
+        "business_center_location": "",
+        "sports_complex": "",
+        "sports_complex_location": "",
+        "image_desc": "Novus Towers – это современный многофункциональный комплекс, расположенный в районе Минор, Ташкент. Включает бизнес-пространства, торговые зоны, гостиницу и жилые помещения. Проект разработан в соответствии с международными стандартами, создавая идеальную среду для работы, отдыха и современной жизни.",
+        "fact_title": "5 ключевых фактов о проекте",
+        "fact_desc": "Ожидается, что Novus Towers станет одним из самых престижных мест в Ташкенте, объединяя удобство, современную жизнь и бизнес-возможности.",
+        "fact_card1": "Рестораны с террасами, фуд-корт и современный многозальный кинотеатр",
+        "fact_card2": "Удобное расположение и транспортная доступность",
+        "fact_card3": "Роскошный премиум-отель",
+        "fact_card4": "Умная инфраструктура для эффективного ведения бизнеса",
+        "fact_card5": "Магазины ведущих мировых брендов и развлекательные зоны",
+        "area": "0.45 га",
+        "area_title": "Площадь проекта",
+        "home_count": "3",
+        "home_count_title": "Подземные этажи",
+        "floor": "19",
+        "floor_title": "Количество этажей",
+        "done_project": "2028",
+        "done_project_title": "Дата завершения строительства",
+        "location_title": "Удобное расположение",
+        "foot": "Пешком",
+        "foot_text1": "15 мин до метро",
+        "foot_text2": "15 мин до школы",
+        "foot_text3": "15 мин до поликлиники",
+        "foot_text4": "5 мин до кафе и ресторанов",
+        "car": "На автомобиле",
+        "car_text1": "5 мин до метро",
+        "car_text2": "5 мин до поликлиники",
+        "car_text3": "10 мин до школы",
+        "car_text4": "5 мин до кафе и ресторанов"
+    },
     "footer": {
         "links_title1": "ИНФО",
         "links1": "О нас",
@@ -367,6 +417,9 @@
         "links8": "Бизнес-центр Nurafshon",
         "links9": "Asia Medline",
         "links10": "The Knowledge Center",
+        "links11": "Novus Towers",
+        "links12": "Anhor",
+        "links13": "Oncowell Company",
         "title": "Ross Foundation",
         "location": "Город Ташкент, Юнусабадский район, улица Абдуллы Кадыри, дом 1А",
         "call_center": "Колл-центр",
