--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -28,7 +28,7 @@
         "card3_desc": "1000",
         "card4_title": "Turar joy hududlari M2",
         "card4_desc": "34 300",
-        "fact_title": "Kompaniya haqida 5 ta fakt", 
+        "fact_title": "Kompaniya haqida 5 ta fakt",
         "fact_desc": "Ross and Foundation – 10 yildan beri biznes markazlari va turar-joy majmualarini barpo etib kelayotgan ishonchli qurilish kompaniyasi. Biz yuqori sifat va zamonaviy dizaynni hamma uchun qulay va mavjud qilishga intilamiz. Loyihalarimiz nafaqat mustahkamligi, balki funksionalligi va qulay joylashuvi bilan ham ajralib turadi.",
         "fact_card1": "Zamonaviy dizayn va funksionallik",
         "fact_card2": "Ishonchli hamkorlik",
@@ -51,6 +51,12 @@
         "card3_location": "Yunusobod tumani, Toshkent",
         "card4_title": "The Knowledge Center",
         "card4_location": "243-maktab hududi, Toshkent",
+        "card5_title": "Novus Towers",
+        "card5_location": "Minor dahasi, Yunusobod tumani",
+        "card6_title": "Anhor",
+        "card6_location": "Anhor bo'yi ko'chasi, Yunusobod tumani",
+        "card7_title": "Oncowell Company",
+        "card7_location": "",
         "sold": "Sotib bo’lingan"
     },
     "project_map": {
@@ -67,7 +73,10 @@
         "location3_desc": "Yunusobod tumani",
         "location4_subtitle": "Innovatsion bilim markazi",
         "location4_title": "The Knowledge Center",
-        "location4_desc": "Olamazor tumani"
+        "location4_desc": "Olamazor tumani",
+        "location5_subtitle": "Zamonaviy megapolis",
+        "location5_title": "Novus Towers",
+        "location5_desc": "Minor tumani"
     },
     "partners": {
         "title": "Hamkorlarimiz"
@@ -354,6 +363,92 @@
         "car_text2": "5 min Poliklinikagacha",
         "car_text4": "5 min Kafe va Restoranlargacha"
     },
+    "projects5": {
+        "title": "Novus Towers",
+        "subtitle": "Toshkentdagi Zamonaviy Shahar Hayotining Kelajagi",
+        "button_text1": "",
+        "button_text2": "Qo'ng'iroq qilish",
+        "place": "Minor tumani",
+        "place_location": "Minor dahasi, Toshkent",
+        "school": "",
+        "school_location": "",
+        "business_center": "",
+        "business_center_location": "",
+        "sports_complex": "",
+        "sports_complex_location": "",
+        "image_desc": "Novus Towers – Toshkentning Minor tumanida joylashgan zamonaviy ko‘p funksiyali majmua bo‘lib, biznes, savdo, mehmondo‘stlik va turar-joy maydonlarini o‘z ichiga oladi. Xalqaro standartlarga mos ravishda loyihalashtirilgan ushbu me’moriy inshoot ish, dam olish va zamonaviy yashash uchun ideal muhit yaratadi.",
+        "fact_title": "Loyiha haqida 5 ta fakt",
+        "fact_desc": "Novus Towers Toshkentning eng nufuzli manzillaridan biriga aylanishi kutilmoqda, bu yerda qulaylik, zamonaviy yashash va biznes imkoniyatlari bir joyga jamlangan.",
+        "fact_card1": "Terrasali restoranlar, food court va zamonaviy multiplex kinoteatri",
+        "fact_card2": "Qulay joylashuv va transport bog‘lanishi",
+        "fact_card3": " Premium darajadagi hashamatli mehmonxona",
+        "fact_card4": "Samarali ishlash uchun aqlli infratuzilma",
+        "fact_card5": "Dunyoning yetakchi brendlari, do‘konlar va ko‘ngilochar joylar",
+        "area": "0.45 ga",
+        "area_title": "Loyiha maydoni",
+        "home_count": "3",
+        "home_count_title": "Yerosti qavatlar",
+        "floor": "19",
+        "floor_title": "Qavvatlar soni",
+        "done_project": "2028",
+        "done_project_title": "Qurilish bitkaziladigan sana",
+        "location_title": "Joylashuvning qulayligi",
+        "foot": "Piyoda",
+        "foot_text1": "15 min Metrogacha",
+        "foot_text2": "15 min Maktabgacha",
+        "foot_text3": "15 min Poliklinikagacha",
+        "foot_text4": "5 min Kafe va Restoranlargacha",
+        "car": "Avtomobilda",
+        "car_text1": "5 min Metrogacha",
+        "car_text2": "5 min Poliklinikagacha",
+        "car_text3": "10 min Maktabgacha",
+        "car_text4": "5 min Kafe va Restoranlargacha"
+    },
+    "projects6": {
+        "title": "Novus Towers",
+        "subtitle": "Ilm va innovatsiyalar uchrashgan maskan",
+        "button_text1": "",
+        "button_text2": "Qo'ng'iroq qilish",
+        "place": "Olamazor tumani",
+        "place_location": "Beruniy Shoh ko'chasi, Toshkent",
+        "school": "",
+        "school_location": "",
+        "business_center": "",
+        "business_center_location": "",
+        "sports_complex": "",
+        "sports_complex_location": "",
+        "image_desc": "The Knowledge Center – kelajak avlodni innovatsion bilimlar bilan ta’minlash uchun yaratilgan zamonaviy ta’lim markazi!",
+        "fact_title": "Loyiha haqida 5 ta fakt",
+        "fact_desc": "The Knowledge Center – bu 1 200 nafar o‘quvchi uchun mo‘ljallangan zamonaviy ta’lim markazi bo‘lib, ilmiy va texnologik rivojlanishga yo‘naltirilgan. Markaz kimyo va kompyuter fanlari uchun ilg‘or laboratoriyalar, innovatsion ta’lim uslublari va interaktiv o‘quv dasturlari bilan o‘quvchilarning amaliy ko‘nikmalarini rivojlantirishga xizmat qiladi. Toshkentdagi 243-maktab hududida joylashgan ushbu maskan, yorug‘ va qulay sinfxonalari bilan ta’lim sifatini oshirishga hamda kelajak avlodni innovatsion bilimlar bilan ta’minlashga qaratilgan.",
+        "fact_card1": "Shaharning ta’lim infratuzilmasiga qo‘shilgan muhim hissa",
+        "fact_card2": "Innovatsion o‘quv muhitini ta’minlovchi infratuzilma",
+        "fact_card3": "Ta’lim sifatini oshirishga yo‘naltirilgan yondashuv",
+        "fact_card4": "Yorug‘ va qulay o‘quv muhitiga ega binolar",
+        "fact_card5": "Ilmiy va texnologik rivojlanish markazi",
+        "area": "0.45 ga",
+        "area_title": "Loyiha maydoni",
+        "floor": "4",
+        "floor_title": "Qavvatlar soni",
+        "done_project": "2024",
+        "done_project_title": "Qurilish bitkaziladigan sana",
+        "calculator": "Kalkulyator",
+        "calculator_title": "Binoni tanlang",
+        "area_input": "Kvadraturani kiriting",
+        "calculator_business": "Biznes markazi",
+        "area_sum": "23",
+        "area_sum_text": "Har bir m² uchun",
+        "total_amount": "Umumiy summa",
+        "calculator_button": "Band qilish",
+        "location_title": "Joylashuvning qulayligi",
+        "foot": "Piyoda",
+        "foot_text1": "10 min Metrogacha",
+        "foot_text3": "10 min Poliklinikagacha",
+        "foot_text4": "5 min Kafe va Restoranlargacha",
+        "car": "Avtomobilda",
+        "car_text1": "5 min Metrogacha",
+        "car_text2": "5 min Poliklinikagacha",
+        "car_text4": "5 min Kafe va Restoranlargacha"
+    },
     "footer": {
         "links_title1": "INFO",
         "links1": "Biz haqimizda",
@@ -367,10 +462,13 @@
         "links8": "Nurafshon Biznes Markazi",
         "links9": "Asia Medline",
         "links10": "The Knowledge Center",
+        "links11": "Novus Towers",
+        "links12": "Anhor",
+        "links13": "Oncowell Company",
         "title": "Ross Foundation",
         "location": "Toshkent shahri, Yunusobod tumani, Abdulla Qodiriy ko‘chasi, 1A-uy",
         "call_center": "Call center",
-        "text1":"© Barcha huquqlar himoyalangan",
-        "text2":"© 2025 «Ross Foundation» MChJ"
+        "text1": "© Barcha huquqlar himoyalangan",
+        "text2": "© 2025 «Ross Foundation» MChJ"
     }
 }
