--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -184,7 +184,7 @@
         "home_count": "2",
         "home_count_title": "Yerosti qavatlar",
         "floor": "14",
-        "floor_title": "Qavvatlar soni",
+        "floor_title": "Qavatlar soni",
         "done_project": "2024",
         "done_project_title": "Qurilish bitkaziladigan sana",
         "calculator": "Kalkulyator",
@@ -237,8 +237,8 @@
         "home_count": "1",
         "home_count_title": "Yerosti qavatlar",
         "floor": "7",
-        "floor_title": "Qavvatlar soni",
-        "done_project": "2026",
+        "floor_title": "Qavatlar soni",
+        "done_project": "2025",
         "done_project_title": "Qurilish bitkaziladigan sana",
         "calculator": "Kalkulyator",
         "calculator_title": "Binoni tanlang",
@@ -295,7 +295,7 @@
         "home_count": "1",
         "home_count_title": "Yerosti qavatlar",
         "floor": "3",
-        "floor_title": "Qavvatlar soni",
+        "floor_title": "Qavatlar soni",
         "done_project": "2025",
         "done_project_title": "Qurilish bitkaziladigan sana",
         "calculator": "Kalkulyator",
@@ -342,7 +342,7 @@
         "area": "0.45 ga",
         "area_title": "Loyiha maydoni",
         "floor": "4",
-        "floor_title": "Qavvatlar soni",
+        "floor_title": "Qavatlar soni",
         "done_project": "2021",
         "done_project_title": "Qurilish bitkaziladigan sana",
         "calculator": "Kalkulyator",
@@ -389,7 +389,7 @@
         "home_count": "3",
         "home_count_title": "Yerosti qavatlar",
         "floor": "19",
-        "floor_title": "Qavvatlar soni",
+        "floor_title": "Qavatlar soni",
         "done_project": "2028",
         "done_project_title": "Qurilish bitkaziladigan sana",
         "location_title": "Joylashuvning qulayligi",
@@ -428,7 +428,7 @@
         "area": "0.45 ga",
         "area_title": "Loyiha maydoni",
         "floor": "4",
-        "floor_title": "Qavvatlar soni",
+        "floor_title": "Qavatlar soni",
         "done_project": "2024",
         "done_project_title": "Qurilish bitkaziladigan sana",
         "calculator": "Kalkulyator",
