--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -9,11 +9,11 @@
     },
     "hero": {
         "title": "Ross Foundation",
-        "subtitle": "Строительство в городе Ташкент",
+        "subtitle": "Строительство, энергетика и инновационные решения.",
         "button_text": "Получить консультацию"
     },
     "vacancies_hero": {
-        "title": "Найдите работу своей мечты с компанией First Class",
+        "title": "Найдите работу своей мечты с компанией Ross Foundation",
         "subtitle": "Команда, которую вы ждали!",
         "button_text": "Присоединиться к команде"
     },
@@ -86,7 +86,9 @@
         "news_page_title": "Новости",
         "news_page_subtitle": "Будьте в курсе последних новостей нашей компании",
         "news_page_body_title": "Новости",
-        "news_detail_title1": "Станьте соседями с друзьями и получите бонус!",
+        "news1_detail_title1": "В центре Ташкента началось строительство современного ресторана и престижного отеля.",
+        "news2_detail_title1": "Развивайте свой бизнес вместе с нами. Арендуйте удобные офисы для вашего бизнеса!",
+        "news3_detail_title1": "Станьте частью растущей команды!",
         "news_detail_title2": "Похожие новости",
         "sana": "Дата",
         "all": "Все",
