--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -124,7 +124,7 @@
         "name_error1": "Необходимо ввести минимум 5 символов",
         "name_error2": "Должна быть хотя бы одна заглавная буква",
         "name_error3": "Должна быть хотя бы одна строчная буква",
-        "phone_number_error": "Номер телефона должен начинаться с +998 и содержать 12 цифр"
+        "phone_number_error": "Номер телефона должен начинаться с +998 и быть введён в формате +998912345678."
     },
     "vacancies_page": {
         "title": "Karyerangizni biz bilan boshlang",
